tests/semantic/invalid/expected/duplicate_variable.txt
semantic error: повторное объявление - идентификатор 'x' уже объявлен в этой области видимости
  --> tests/semantic/invalid/duplicate_variable.src:3:9
3  int x = 20;
       ^
   = идентификатор: 'x'
   = подсказка: переименуйте идентификатор или удалите предыдущее объявление

